implementa autenticação via jwt

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "EDiaristasSqlServer": "Server=Localhost;Database=EDiaristas;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "AccessExpirationInSeconds": 86400,
+    "AccessKey": "QK8Tc6emC4AlfkzwdmUYnBqXUnlomXUA"
   }
 }
