removida a dependencias do IdentityEntityFrameworkCore

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "EDiaristasSqlServer": "Server=Localhost;Database=EDiaristas;Trusted_Connection=True;"
+    "EDiaristasSqlServer": "Server=Localhost;Database=EDiaristasRef;Trusted_Connection=True;"
   },
   "Jwt": {
     "AccessExpirationInSeconds": 86400,
