--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,6 +10,8 @@
   },
   "Jwt": {
     "AccessExpirationInSeconds": 86400,
-    "AccessKey": "QK8Tc6emC4AlfkzwdmUYnBqXUnlomXUA"
+    "AccessKey": "QK8Tc6emC4AlfkzwdmUYnBqXUnlomXUA",
+    "RefreshExpirationInSeconds": 129600,
+    "RefreshKey": "RWQ4r43A5IhRRUHlLRRoLcX8u0GC2LXl"
   }
 }
