implementa service de consulta de distancia

--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,5 @@ obj/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,dotnetcore,visualstudiocode
+
+appsettings.Development.json
