implementa task de seleção de diaristas

--- a/EDiaristas.csproj
+++ b/EDiaristas.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+    <PackageReference Include="Sgbj.Cron.CronTimer" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
