--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,5 @@ obj/
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,dotnetcore,visualstudiocode
 
 appsettings.Development.json
+
+wwwroot/uploads
